Button functionality and particles.js implementation

--- a/Is-This-Love/index.html
+++ b/Is-This-Love/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="dist/main.css">
 </head>
 <body>
+	<div id="particles-js"></div>
 	<div class="container">
 		<div class="cover-art"></div>
 		<div class="time" data-before="14%">
@@ -21,8 +22,8 @@
 			</div>
 			<div class="options">
 				<div class="control-image repeat-button" id="repeat"></div>
-				<div class="control-image back-button"></div>
-				<div class="control-image forward-button"></div>
+				<div class="control-image back-button" id="back"></div>
+				<div class="control-image forward-button" id="forward"></div>
 			</div>
 		</div>
 	</div>
