--- a/Is-This-Love/index.html
+++ b/Is-This-Love/index.html
@@ -27,6 +27,7 @@
 			</div>
 		</div>
 	</div>
+	<canvas id="analyser_render"></canvas>
 </body>
 <footer>
 	<audio src="dist/waitress.mp3" preload="auto" id="audio"></audio>
