--- a/Is-This-Love/index.html
+++ b/Is-This-Love/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Is This Love?</title>
+	<title>Music Player</title>
 	<link rel="stylesheet" href="dist/main.css">
 </head>
 <body>
