--- a/Is-This-Love/index.html
+++ b/Is-This-Love/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Music Player</title>
 	<link rel="stylesheet" href="dist/main.css">
+	<link rel="shortcut icon" type="image/x-icon" href="dist/images/paused.ico" id="favicon">
 </head>
 <body>
 	<div id="particles-js"></div>
