--- a/Sport-App/index.html
+++ b/Sport-App/index.html
@@ -6,6 +6,16 @@
 	<link rel="stylesheet" href="dist/main.css">
 </head>
 <body>
+	<div class="container">
+		<div class="columns-span app">
+			<nav>
+				<svg class="hamburger" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" ><path id="menu-icon" d="M462,163.5H50v-65h412V163.5z M462,223.5H50v65h412V223.5z M462,348.5H50v65h412V348.5z"/>
+				</svg>
+				<h3>Alarms</h3>
+				<div class="suppl-icon"></div>
+			</nav>
+		</div>
+	</div>
 </body>
 <footer>
 	<script src="dist/scripts/production.min.js"></script>
