--- a/Sport-App/index.html
+++ b/Sport-App/index.html
@@ -9,11 +9,42 @@
 	<div class="container">
 		<div class="columns-span app">
 			<nav>
-				<svg class="hamburger" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" ><path id="menu-icon" d="M462,163.5H50v-65h412V163.5z M462,223.5H50v65h412V223.5z M462,348.5H50v65h412V348.5z"/>
-				</svg>
+				<svg class="hamburger" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" ><path id="menu-icon" d="M462,163.5H50v-65h412V163.5z M462,223.5H50v65h412V223.5z M462,348.5H50v65h412V348.5z"/></svg>
 				<h3>Alarms</h3>
 				<div class="suppl-icon"></div>
 			</nav>
+			<div class="content">
+				<div class="card" id="card1">
+					<header>
+						<span class="entypo-clock"></span>
+						<h3>Duration</h3>
+					</header>
+					<div class="info">
+						<h1>1:12:07</h1>
+					</div>
+				</div>
+				<div class="card" id="card2">
+					<header>
+						<span class="entypo-compass"></span>
+						<h3>Distance</h3>
+					</header>
+					<div class="info">
+						<h2>10.18<span>km</span></h2>
+						<div class="metrics">
+							<h3>Calories: <span>4.67</span><span>ckal</span></h3>
+							<h3>Heart Rate: <span>174</span><span>bpm/R</span></h3>
+						</div>
+					</div>
+				</div>
+				<div class="card" id="card3">
+					<header>
+						<span class="entypo-chart-line"></span>
+						<h3>Speed Chart</h3>
+					</header>
+					<div class="info">
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
